# real_live_wall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
docs/: ARCHITECTURE.md  고도화-아이디어.md
shaders/: audio_bars.glsl  forest_fireflies.glsl  mountains.glsl  ocean.glsl  plasma.glsl  rain.glsl  sunset_clouds.glsl
src/: app.rs  audio.rs  config.rs  gpu.rs  lib.rs  main.rs  nowplaying.rs  persist.rs  platform.rs  postfx.rs  reactive.rs  renderer.rs  screenshot.rs  shader.rs  startup.rs  tray.rs  ui.rs  uniforms.rs  update.rs
tests/: shader_validation.rs
