[package]
name = "real_live_wall"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
authors = ["BaeTab <bhwoo48@gmail.com>"]
description = "Reactive cross-platform live wallpaper engine (wgpu) with Shadertoy GLSL support and real-time audio reactivity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BaeTab/real_live_wall"
readme = "README.md"

[dependencies]
# wgpu 29 (not 30) to match egui-wgpu 0.35's `wgpu ^29` requirement so the GUI
# and the engine share a single wgpu version.
wgpu = { version = "29", features = ["glsl", "wgsl"] }
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.18"
rustfft = "6"
sysinfo = "0.39"
notify = "9.0.0-rc.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
# GUI settings panel
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = "0.35"
rfd = "0.17"

[target.'cfg(windows)'.build-dependencies]
# Embeds assets/icon.ico into the exe (Explorer + taskbar + window icon).
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Faster iterative debug builds of the heavy graphics stack.
[profile.dev.package."*"]
opt-level = 2
