[package]
name = "real_live_wall"
version = "1.2.0"
edition = "2021"
rust-version = "1.80"
authors = ["BaeTab <bhwoo48@gmail.com>"]
description = "Reactive cross-platform live wallpaper engine (wgpu) with Shadertoy GLSL support and real-time audio reactivity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BaeTab/real_live_wall"
readme = "README.md"

[dependencies]
# wgpu 29 (not 30) to match egui-wgpu 0.35's `wgpu ^29` requirement so the GUI
# and the engine share a single wgpu version.
wgpu = { version = "29", features = ["glsl", "wgsl"] }
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.18"
rustfft = "6"
sysinfo = "0.39"
notify = "9.0.0-rc.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
# PNG output for the headless --screenshot QA path
png = "0.17"
# Settings persistence (%APPDATA%/real_live_wall/config.toml)
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Auto-update: query GitHub Releases, download + extract the update zip.
ureq = "3.2.1"
serde_json = "1.0.150"
zip = "4.2.0"
# GUI settings panel
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = "0.35"
rfd = "0.17"

[target.'cfg(windows)'.build-dependencies]
# Embeds assets/icon.ico into the exe (Explorer + taskbar + window icon).
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    # Now-playing (SMTC) + album-art decoding for the reactive palette.
    "Media_Control",
    "Storage_Streams",
    "Graphics_Imaging",
    "Foundation",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Faster iterative debug builds of the heavy graphics stack.
[profile.dev.package."*"]
opt-level = 2
